# fdx

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
docs/: index.md  reference.md  vector.md
docs/javascripts/: mathjax.js
examples/: examples-2d-operators.ipynb  examples-basic.ipynb  examples-basics.py  examples-derivatives-1d.ipynb
fdx/: __init__.py  _version.py  coefs.py  compatible.py  config.py  findiff.py  grids.py  interface.py  norm.py  operators.py  stencils.py  types.py  utils.py  vector.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_accuracy.py  test_bugs.py  test_coeffs.py  test_coefs_comprehensive.py  test_custom_jvp.py  test_diff_operator.py  test_divergence_curl_laplacian.py  test_findiff_compat.py  test_gradient_comprehensive.py  test_grids_comprehensive.py  test_jit.py  test_operators.py  test_properties_hypothesis.py  test_speed.py  test_vec.py  test_vector.py  test_vector_float64.py
